[gd_scene load_steps=44 format=2]

[ext_resource path="res://Gracz/Miecz.gd" type="Script" id=1]
[ext_resource path="res://Gracz/Grafika/reka.png" type="Texture" id=2]
[ext_resource path="res://Gracz/Miecz/MieczNaStart.png" type="Texture" id=3]
[ext_resource path="res://Gracz/Gracz.gd" type="Script" id=4]
[ext_resource path="res://Gracz/Grafika/ludzik_szablon.png" type="Texture" id=5]
[ext_resource path="res://Walka/HitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Walka/HurtBox.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.767492, 3.24455 )

[sub_resource type="Animation" id=2]
resource_name = "ruch_dol"
length = 0.8
loop = true
step = 0.16
tracks/0/type = "value"
tracks/0/path = NodePath("RekaPrawa:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.000854454, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -3 ), Vector2( -8, -3 ), Vector2( -7.5, -4 ), Vector2( -8, -3 ), Vector2( -7.5, -2.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RekaLewa:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.000854454, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -3 ), Vector2( 8, -3 ), Vector2( 7.5, -2 ), Vector2( 8, -2.5 ), Vector2( 8, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RekaLewa:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.000854454, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 6.0, 0.0, 6.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RekaPrawa:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -6.0, -3.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GraczTekstura:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GraczTekstura:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -0.5 ), Vector2( 0, -0.25 ), Vector2( 0, -0.5 ), Vector2( 0, -0.25 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ruch_gora"
length = 0.8
loop = true
step = 0.16
tracks/0/type = "value"
tracks/0/path = NodePath("RekaPrawa:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -3 ), Vector2( 7.5, -4 ), Vector2( 8, -3 ), Vector2( 7.5, -2.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RekaLewa:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -3 ), Vector2( -7.5, -2 ), Vector2( -8, -2.5 ), Vector2( -8, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RekaLewa:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 6.0, 0.0, 6.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RekaPrawa:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6.0, 3.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GraczTekstura:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GraczTekstura:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -0.5 ), Vector2( 0, -0.25 ), Vector2( 0, -0.5 ), Vector2( 0, -0.25 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ruch_lewo"
length = 0.8
loop = true
step = 0.16
tracks/0/type = "value"
tracks/0/path = NodePath("GraczTekstura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RekaPrawa:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -3 ), Vector2( -7.5, -3 ), Vector2( -8, -3 ), Vector2( -8.5, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RekaLewa:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -6.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RekaLewa:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -3 ), Vector2( 7, -4 ), Vector2( 8, -3 ), Vector2( 8.5, -4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RekaPrawa:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GraczTekstura:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -0.5 ), Vector2( 0, -0.25 ), Vector2( 0, -0.5 ), Vector2( 0, -0.25 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
step = 0.16
tracks/0/type = "value"
tracks/0/path = NodePath("GraczTekstura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RekaPrawa:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -3 ), Vector2( -7.5, -3 ), Vector2( -8, -3 ), Vector2( -7.5, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RekaLewa:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -6.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RekaLewa:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -3 ), Vector2( 8, -4 ), Vector2( 8, -3 ), Vector2( 7.5, -2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RekaPrawa:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GraczTekstura:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -0.5 ), Vector2( 0, -0.25 ), Vector2( 0, -0.5 ), Vector2( 0, -0.25 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "stoj_dol"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GraczTekstura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RekaPrawa:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, -3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RekaPrawa:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RekaLewa:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, -3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RekaLewa:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "stoj_gora"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GraczTekstura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RekaPrawa:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -6.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "stoj_lewo"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GraczTekstura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=9]
resource_name = "stoj_prawo"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GraczTekstura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "walka_dol"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("GraczTekstura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "atak_koniec"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RekaPrawa:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -3 ), Vector2( -7, -5 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RekaPrawa:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -6.0, 6.0, -180.0, -220.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RekaLewa:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -3 ), Vector2( 7, -2 ), Vector2( 8.5, -3.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RekaLewa:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 12.0, -6.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("RekaPrawa:show_behind_parent")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "walka_gora"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GraczTekstura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "atak_koniec"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RekaPrawa:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -3 ), Vector2( 7, -4 ), Vector2( 0, -7 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RekaPrawa:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 6.0, 24.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RekaPrawa:show_behind_parent")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RekaLewa:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -3 ), Vector2( -7, -4 ), Vector2( -9, -2 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("RekaLewa:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 6.0, -6.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "walka_lewo"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("GraczTekstura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "atak_koniec"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RekaPrawa:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -3 ), Vector2( 0, -6 ), Vector2( -9, -2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RekaPrawa:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 6.0, 0.0, -90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RekaLewa:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, -3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RekaPrawa:show_behind_parent")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
resource_name = "walka_prawo"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GraczTekstura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "atak_koniec"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RekaPrawa:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -3 ), Vector2( -9, -6 ), Vector2( 9, -2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RekaPrawa:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 6.0, -12.0, 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RekaLewa:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -3 ), Vector2( 6, -2 ), Vector2( 4, -4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RekaPrawa:show_behind_parent")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("RekaLewa:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -6.0, 6.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RekaLewa:show_behind_parent")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "walka_dol"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "walka_prawo"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "walka_gora"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "walka_lewo"

[sub_resource type="AnimationNodeBlendSpace2D" id=18]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 16 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "ruch_dol"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "ruch_prawo"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "ruch_gora"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "ruch_lewo"

[sub_resource type="AnimationNodeBlendSpace2D" id=23]
blend_point_0/node = SubResource( 19 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 20 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 21 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 22 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "stoj_dol"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "stoj_prawo"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "stoj_gora"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "stoj_lewo"

[sub_resource type="AnimationNodeBlendSpace2D" id=28]
blend_point_0/node = SubResource( 24 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 25 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 26 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 27 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachine" id=33]
states/Atak/node = SubResource( 18 )
states/Atak/position = Vector2( 256, 192 )
states/Ruch/node = SubResource( 23 )
states/Ruch/position = Vector2( 454, 105 )
states/Stoj/node = SubResource( 28 )
states/Stoj/position = Vector2( 256, 105 )
transitions = [ "Stoj", "Ruch", SubResource( 29 ), "Ruch", "Stoj", SubResource( 30 ), "Stoj", "Atak", SubResource( 31 ), "Atak", "Stoj", SubResource( 32 ) ]
start_node = "Stoj"

[sub_resource type="AnimationNodeStateMachinePlayback" id=34]

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 1.78659, 4.16501 )

[sub_resource type="CapsuleShape2D" id=36]
radius = 2.49313
height = 4.24144

[node name="GraczPostac" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="GraczTekstura" type="Sprite" parent="."]
texture = ExtResource( 5 )
offset = Vector2( 0, -5 )
hframes = 20
frame = 1

[node name="RekaPrawa" type="Sprite" parent="."]
position = Vector2( -8.5, -4.5 )
rotation = -0.0523599
texture = ExtResource( 2 )

[node name="Miecz" type="KinematicBody2D" parent="RekaPrawa"]

[node name="Miecz" type="Sprite" parent="RekaPrawa/Miecz"]
position = Vector2( 0, -1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
offset = Vector2( 0, -6 )
script = ExtResource( 1 )

[node name="HitBox" parent="RekaPrawa/Miecz/Miecz" instance=ExtResource( 6 )]
position = Vector2( 16.5395, 4.29468 )
rotation = -0.10472
scale = Vector2( 2, 2 )
input_pickable = false
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" parent="RekaPrawa/Miecz/Miecz/HitBox" index="0"]
position = Vector2( -7.56504, -7.06267 )
rotation = 0.10472
shape = SubResource( 1 )

[node name="RekaLewa" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 7, -2.5 )
rotation = -0.0523599
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ruch_dol = SubResource( 2 )
anims/ruch_gora = SubResource( 3 )
anims/ruch_lewo = SubResource( 4 )
anims/ruch_prawo = SubResource( 5 )
anims/stoj_dol = SubResource( 6 )
anims/stoj_gora = SubResource( 7 )
anims/stoj_lewo = SubResource( 8 )
anims/stoj_prawo = SubResource( 9 )
anims/walka_dol = SubResource( 10 )
anims/walka_gora = SubResource( 11 )
anims/walka_lewo = SubResource( 12 )
anims/walka_prawo = SubResource( 13 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 33 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 34 )
parameters/Atak/blend_position = Vector2( 0.196291, 0.074869 )
parameters/Ruch/blend_position = Vector2( 0, 1 )
parameters/Stoj/blend_position = Vector2( 0, 1 )

[node name="ObszarPostaci" type="CollisionShape2D" parent="."]
light_mask = 4
position = Vector2( -0.148651, 0.743256 )
rotation = -1.5708
shape = SubResource( 35 )

[node name="HurtBox" parent="ObszarPostaci" instance=ExtResource( 7 )]
input_pickable = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="ObszarPostaci/HurtBox" index="0"]
shape = SubResource( 36 )
[connection signal="area_entered" from="RekaPrawa/Miecz/Miecz/HitBox" to="RekaPrawa/Miecz/Miecz" method="_on_HitBox_area_entered"]
[connection signal="area_entered" from="ObszarPostaci/HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="RekaPrawa/Miecz/Miecz/HitBox"]

[editable path="ObszarPostaci/HurtBox"]
